--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-router": "^4.0.13",
     "vue-slider-component": "^4.1.0-beta.7",
     "vue3-datepicker": "^0.4.0",
+    "vue3-datetime": "^2.0.0-beta.3",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
