--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "v-tooltip": "^2.1.3",
     "vue": "^3.5.10",
     "vue-cool-lightbox": "^2.7.5",
+    "vue-currency-input": "^3.1.0",
     "vue-router": "^4.0.13",
     "vue-slider-component": "^4.1.0-beta.7",
     "vue3-datepicker": "^0.4.0",
