--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "highcharts-vue": "^2.0.1",
     "terser": "^5.36.0",
+    "tippy.vue": "^3.2.1",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.5.12",
+    "vue-cookies": "^1.8.5",
+    "vue-currency-input": "^3.1.0",
+    "vue-slider-component": "^4.1.0-beta.7",
+    "vue3-persian-datetime-picker": "^1.2.2",
+    "vue3-smooth-scroll": "^0.8.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
